--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,10 @@
     {
       "source": "/api/(.*)",
       "destination": "https://academics-su1d.onrender.com/api/$1"
-    }
-  ],
-  "routes": [
-    {
-      "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
