--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "concurrently": "^7.6.0",
     "jsdom": "^23.0.1",
     "vite": "^4.1.0",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^1.0.4"
   }
 }
